welcome.lessons.welcome.bat.bool1.Close10.scala.code
def close10(a:Int, b:Int): Int = {
	var c : Int = 10 - a;
	var d : Int = 10 - b;
	
	if (Math.abs(c)<Math.abs(d)) { a };
	if (Math.abs(c)>Math.abs(d)) { b };	
	if (Math.abs(c)==Math.abs(d)) {return 0 
	
	};
}
